fix z-index

--- a/public/css/cards/base.css
+++ b/public/css/cards/base.css
@@ -142,7 +142,7 @@
   
   /* performance */
   pointer-events: auto;
-  overflow: hidden;
+  /* overflow: hidden; */
   isolation: isolate;
 }
 
